platform/postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    pod-security.kubernetes.io/enforce: restricted
